Added heat map, results by top/bottom comments and top authors, added subreddit mention matrix (subreddits mentioned from other subreddit)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-data/RC_2016-08
-data/RC_2016-08.bz2
-data/by_subreddit
+data/RC_2016-08/RC_2016-08
+data/RC_2016-08/RC_2016-08.bz2
+data/RC_2016-08/by_subreddit
+
+data/RC_2016-01/RC_2016-01
+data/RC_2016-01/RC_2016-01.bz2
+data/RC_2016-01/by_subreddit
 wordclouds/*
 *.pyc
