Added chord diagram for subreddit mentions, partitions by top pos/neg/godwin scores, added 2 more month data sets (not fully run yet)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@ data/RC_2016-08/RC_2016-08
 data/RC_2016-08/RC_2016-08.bz2
 data/RC_2016-08/by_subreddit
 
+data/RC_2016-03/RC_2016-03
+data/RC_2016-03/RC_2016-03.bz2
+data/RC_2016-03/by_subreddit
+
+data/RC_2016-05/RC_2016-05
+data/RC_2016-05/RC_2016-05.bz2
+data/RC_2016-05/by_subreddit
+
 data/RC_2016-01/RC_2016-01
 data/RC_2016-01/RC_2016-01.bz2
 data/RC_2016-01/by_subreddit
