Added swear words stat

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,25 @@
-data/RC_2016-08/RC_2016-08
 data/RC_2016-08/RC_2016-08.bz2
 data/RC_2016-08/by_subreddit
 
-data/RC_2016-03/RC_2016-03
 data/RC_2016-03/RC_2016-03.bz2
 data/RC_2016-03/by_subreddit
 
-data/RC_2016-05/RC_2016-05
 data/RC_2016-05/RC_2016-05.bz2
 data/RC_2016-05/by_subreddit
 
-data/RC_2016-01/RC_2016-01
 data/RC_2016-01/RC_2016-01.bz2
 data/RC_2016-01/by_subreddit
+
+data/RC_2016-02/RC_2016-02.bz2
+data/RC_2016-02/by_subreddit
+
+data/RC_2016-04/RC_2016-04.bz2
+data/RC_2016-04/by_subreddit
+
+data/RC_2016-06/RC_2016-06.bz2
+data/RC_2016-06/by_subreddit
+
+data/RC_2016-07/RC_2016-07.bz2
+data/RC_2016-07/by_subreddit
 wordclouds/*
 *.pyc
