--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ data/RC_2016-07/by_subreddit
 
 data/RC_2016-09/RC_2016-09.bz2
 data/RC_2016-09/by_subreddit
+
+data/RC_2016-10/RC_2016-10.bz2
+data/RC_2016-10/by_subreddit
+
 visualization/final_viz/word_clouds/*
 !visualization/final_viz/word_clouds/September 2016
 *.pyc
+wordclouds
